--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "librewired"]
 	path = librewired
-	url = http://git.m2-entertainment.de/lib-rewired.git
+	url = https://github.com/docmeth02/lib-rewired.git
